[package]
name = "rust_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.6", default-features = false, features = ["png"]}
imageproc = "0.23.0"
rand = "0.8.5"
rusttype = "0.9.3"
base64 = "0.13"